# SaaS-DMS

./: .env.example  .env.local.example  .gitignore  .replit  DEV_DOCKER_Instructions.md  DEV_SETUP.md  DEV_SETUP_NO_DOCKER.md  Dockerfile  QUICKSTART.md  README_DEV.md  docker-compose.dev.yml  docker-compose.yml  docker-wrapper.sh  entrypoint.sh  implementation_plan.md  logic_review.md  main.py  nginx.conf  pyproject.toml  replit.md  requirements.txt  setup.py
attached_assets/: Pasted--sage-local-dms-samba-1-docker-rm-sage-local-dms-samba-_1768591145453.txt  Pasted-Act-as-a-Senior-Python-Architect-and-DevOps-Engineer-I-_1768571611781.txt  Pasted-Act-as-a-Senior-Software-Architect-and-DevOps-Engineer-_1768573453004.txt  Pasted-Code-Review-Refactoring-Report-SaaS-DMS-Datum-23-01-202_1769065870118.txt  Pasted-Das-Problem-dass-der-Container-in-Azure-nicht-startet-l_1768996617878.txt  Pasted-Du-bist-ein-Senior-Django-Architect-und-UI-UX-Experte-f_1768832691664.txt  Pasted-Hier-ist-meine-Bewertung-und-Empfehlung-zu-deinem-Konze_1769068564964.txt  Pasted-Hier-sind-die-notwendigen-nderungen-f-r-dms-tasks-py-zu_1768839566333.txt  Pasted-Rolle-Du-bist-ein-Senior-Cloud-Developer-und-Experte-f-_1768840685676.txt  Pasted-Rolle-Du-bist-ein-Senior-Cloud-Developer-und-Experte-f-_1768841462878.txt  Pasted-Verbindung-mit-dem-Datenstrom-wird-hergestellt-TimeStam_1768992047794.txt  Pasted-azure-ubuntu-azure-ubuntu-1-cd-sage-local-dms-azure-ubu_1768653894753.txt  Pasted-azure-ubuntu-azure-ubuntu-1-cd-sage-local-dms-docker-co_1768600453785.txt  (+18 more)
dms/: admin.py  (+13 more)
dms-sync-agent/: Makefile  go.mod
(+85 files in other folders)
